fix trendbox alignment

--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ button:hover{
   border: 1px solid black;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
   max-height: 230px;
   padding-left: 10%;
 }
